--- a/Registration page/registration.html
+++ b/Registration page/registration.html
@@ -55,11 +55,10 @@
     <h1>Create account</h1>
     <form action="" id="registrationForm">
       <label for="fname">First name:</label>
-      <input type="text" id="fname" name="fname" required="required" /><br />
+      <input type="text" id="fname" name="fname" required autofocus/><br />
 
       <label for="lname">Last name:</label>
       <input type="text" id="lname" name="lname" required="required" /><br />
-
       <label for="email">Email:</label>
       <input
         type="email"
